# projeto-dados-front

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Makefile  README.md  docker-compose.yml  index.html  package-lock.json  package.json
backend/: API_ROUTES.md  analytics_service.py  deps.py  main.py  pyproject.toml  requirements.txt  response.py  sanitize_excel.py  utils.py
backend/application/: __init__.py  dtos.py
backend/application/usecases/: admin.py  create_manual.py  dashboard.py  get_certificate.py  get_city_heatmap.py  list_certificates.py  upload_excel.py
backend/domain/: __init__.py  entities.py  exceptions.py  repositories.py
backend/domain/services/: __init__.py  geocoding.py  logging.py  pdf_engine.py  pdf_service.py  processed_files_index.py  system_state.py
backend/infrastructure/: __init__.py  factories.py  repositories.py
backend/infrastructure/adapters/: __init__.py  nominatim_adapter.py  pdf_engine_adapter.py
backend/infrastructure/http/: server.py
backend/infrastructure/http/routers/: __init__.py  admin.py  dashboard.py  (+1 more)
backend/infrastructure/logging/: adapters.py  composite.py  factory.py  formatters.py
backend/interface/: __init__.py  presenters.py
backend/interface/controllers/: __init__.py  admin_controller.py  certificados_controller.py  dashboard_controller.py
backend/routers/: admin.py  certificados.py  dashboard.py
backend/templates/: certificado.css  certificado.html
backend/tests/: test_upload_excel.py
backend/usecases/: create_manual.py  get_certificate.py  list_certificates.py  upload_excel.py
(+23 files in other folders)
